[gd_scene load_steps=8 format=3 uid="uid://cjkixedf7re0n"]

[ext_resource type="Script" uid="uid://c3oj8c4c2wsb" path="res://game.gd" id="1_7jktm"]
[ext_resource type="Texture2D" uid="uid://cgbcutey13n5f" path="res://assets/Background Empty.png" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://bae58tbrjyt1j" path="res://paddle.tscn" id="2_feb5d"]
[ext_resource type="Texture2D" uid="uid://dlshv00chq0l0" path="res://assets/Paddle_2.png" id="3_fc0e3"]
[ext_resource type="PackedScene" uid="uid://u6o0yetvuj34" path="res://ball.tscn" id="4_fc0e3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc0e3"]
size = Vector2(1255, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jktm"]
size = Vector2(20, 542.5)

[node name="Game" type="Node2D"]
script = ExtResource("1_7jktm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("1_80nbo")

[node name="Player1Paddle" parent="." instance=ExtResource("2_feb5d")]
position = Vector2(110, 360)

[node name="Player2Paddle" parent="." instance=ExtResource("2_feb5d")]
position = Vector2(1170, 360)
is_player_one = false

[node name="Sprite2D" parent="Player2Paddle" index="0"]
texture = ExtResource("3_fc0e3")

[node name="Ball" parent="." instance=ExtResource("4_fc0e3")]
position = Vector2(640, 360)

[node name="TopWall" type="StaticBody2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2(638.5, 79)
shape = SubResource("RectangleShape2D_fc0e3")

[node name="BottomWall" type="StaticBody2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2(640, 640)
shape = SubResource("RectangleShape2D_fc0e3")

[node name="LeftGoal" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGoal"]
position = Vector2(81, 358.5)
shape = SubResource("RectangleShape2D_7jktm")

[node name="RightGoal" type="Area2D" parent="."]
position = Vector2(1199, 360)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGoal"]
position = Vector2(0, 0.25)
shape = SubResource("RectangleShape2D_7jktm")

[node name="Score" type="CanvasLayer" parent="."]

[node name="Player1Score" type="Label" parent="Score"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -86.0
offset_top = 9.0
offset_right = -46.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Player2Score" type="Label" parent="Score"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 62.0
offset_top = 9.0
offset_right = 102.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "0"

[connection signal="body_entered" from="LeftGoal" to="." method="_on_left_goal_body_entered"]
[connection signal="body_entered" from="RightGoal" to="." method="_on_right_goal_body_entered"]

[editable path="Player2Paddle"]
